@@ -1,9 +1,0 @@
-<h2>Form has been saved</h2>
-
-<a href={concat('formmaker/edit/', $form_definition)|ezurl()}>Back to editing.</a>
-
-{*<br/>*}
-
-{*<a>Preview on front</a>*}
-{* it would be nice to have that feature. Link should be dispalyed *}
-{* ...only when content object with form attached exists *}
