@@ -68,7 +68,7 @@ if (is_numeric($form_id))
 }
 
 $error_message = '';
-if( $http->hasPostVariable( 'SubmitButton' ) ) 
+if( $http->hasPostVariable( 'name' ) ) 
 {
     // validating required fields
     foreach ($form_elements as $key => $data)
@@ -87,32 +87,28 @@ if( $http->hasPostVariable( 'SubmitButton' ) )
         }
     }
         
-    // it's and update
-    if (is_numeric($form_id))
+    if (empty($error_message)) 
     {
-        if (empty($error_message)) 
+        // it's and update
+        if (is_numeric($form_id))
         {
             // and there were no errors!
             formDefinitions::updateForm($form_id, $form_elements);
             formAttributes::updateFormAttributes( $_POST, $http->postVariable( 'definition_id' ) );
 
             // clearing the cache for nodes which uses this form
-            formDefinitions::clearFormCache($form_id);
-        }       
-    }
-    // it's a brand new form
-    else 
-    {      
-        // and there were some errors!
-        if (empty($error_message)) 
-        {
+            formDefinitions::clearFormCache($form_id);   
+        }
+        // it's a brand new form
+        else 
+        {      
             // redirecting to edit page (adding attributes)
             $saved_object = formDefinitions::addForm( $form_elements );
             $href = 'formmaker/edit/' . $saved_object->attribute('id');
             eZURI::transformURI( $href );
             eZHTTPTool::redirect( $href );
             eZExecution::cleanExit();
-        }
+        }        
     }
 }
 
@@ -128,14 +124,21 @@ $tpl->setVariable( 'validator_email_id', formValidators::EMAIL_ID);
 $Result = array();
 
 // if form is saved
+$Result['content'] = $tpl->fetch( 'design:forms/edit.tpl' );
 if( $http->hasPostVariable('definition_id') && empty($error_message) )
 {
-    $tpl->setVariable( 'form_definition', $http->postVariable('definition_id') );
-    $Result['content'] = $tpl->fetch( 'design:forms/saved.tpl' );
-}
-else
-{
-    $Result['content'] = $tpl->fetch( 'design:forms/edit.tpl' );
+    if ( $http->hasPostVariable( 'SaveExitButton' ) )
+    {
+        $href = 'formmaker/list/';
+    }
+    elseif ( $http->hasPostVariable( 'SaveButton' ) )
+    {
+        $href = 'formmaker/edit/' . $form_id;      
+    }
+    
+    eZURI::transformURI( $href );
+    eZHTTPTool::redirect( $href );
+    eZExecution::cleanExit();      
 }
 
 $Result['path']    = array( array( 'tag_id' => 0,
