@@ -5,6 +5,7 @@ Version 1.4
 - Added possibility to set Confirmation page summary text
 - Added Cancel button on Edit page
 - Top and bottom controlbars set as default in eZ
+- Added "Save and exit" button on edit page
 
 Version 1.3.2
 - Fixed sending of empty email by hitting F5 on receipt page
